--- a/flotavehicularzona7/appflotavehicular/templates/formordendetrabajo/salidaorden.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formordendetrabajo/salidaorden.html
@@ -9,7 +9,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Lista de Ordenes de Trabajo de Salida</h1>
+            <h1>Lista de Envios a Dependecia</h1>
           </div>
         </div>
       </div>
