--- a/flotavehicularzona7/appflotavehicular/templates/formplantilla/pantalladeinicio.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formplantilla/pantalladeinicio.html
@@ -262,7 +262,7 @@
                <div class="col-md-10 offset-md-1">
                   <div class="titlepage">
                      <h2>Nuestros Servicios</h2>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, There </p>
+                     <p>La Policía Nacional del Ecuador, como Institución que brinda servicios  de manera permanente y constante a la ciudadanía, y en virtud de los avances de tecnología y manejos de información,  que permiten la integración de todos los servicios policiales en un único portal web para la Policía Nacional del Ecuador, permitirá alcanzar niveles de progreso y de maduración dentro de este ámbito, por lo que el grado de aceptación será primordial para alcanzar los objetivos planteados. </p>
                   </div>
                </div>
             </div>
