--- a/flotavehicularzona7/appflotavehicular/templates/formmantenimiento/entradamantenimiento.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formmantenimiento/entradamantenimiento.html
@@ -9,7 +9,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Lista de salidas a mantenimiento</h1>
+            <h1>Lista de recepcion de  mantenimiento</h1>
           </div>
         </div>
       </div>
