--- a/flotavehicularzona7/appflotavehicular/templates/formordendetrabajo/ingresar_codigo_modal2.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formordendetrabajo/ingresar_codigo_modal2.html
@@ -53,7 +53,15 @@
                                                     <input type="file" id="firmage" name="firmage" class="form-control" required>
                                                 </div>
                                             </div>
-                                            
+                                            <div class="form-group">
+                                                <label for="contrasenaFirma">Fecha Entrada:</label>
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                                    </div>
+                                                    <input type="date" id="fechaentrada" name="fechaentrada" class="form-control" required>
+                                                </div>
+                                            </div>
                                             <br>
                                             <button type="submit" class="btn btn-outline-light btn-success">Generar PDF</button>
                                             <button type="button" class="btn btn-outline-light btn-danger" onclick="closeModal()">Cancelar</button>
