--- a/flotavehicularzona7/appflotavehicular/templates/formtipomantenimiento/formulariotipomantenimiento.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formtipomantenimiento/formulariotipomantenimiento.html
@@ -32,6 +32,9 @@
                         <th>Identificador</th>
                         <th>Tipo de Mantenimiento</th>
                         <th>Descripción</th>
+                        <th>Subtotal</th>
+                        <th>Iva</th>
+                        <th>Total</th>
                         <th>Acciones</th>
                     </tr>
                   </thead>
@@ -41,6 +44,9 @@
                         <td>{{tipomantenimiento.id}}</td>
                         <td>{{tipomantenimiento.tipo}}</td>
                         <td>{{tipomantenimiento.descripcion}}</td>
+                        <td>{{tipomantenimiento.subtotal}}</td>
+                        <td>{{tipomantenimiento.iva}}</td>
+                        <td>{{tipomantenimiento.total}}</td>
                         
                         <td>
                             <a name="" id="" class="btn btn-warning"
