--- a/flotavehicularzona7/appflotavehicular/templates/formvehiculo/crearvehiculo.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formvehiculo/crearvehiculo.html
@@ -212,7 +212,23 @@
                         </div>
                     <!-- /.input group -->
                     </div>
-
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="fas fa-building"></i></span>
+                            </div>
+                            <select 
+                            name="dependencia" 
+                            id="dependencia" 
+                            class="form-control" 
+                            required="">
+                            <option >Dependencia</option>
+                            {% for dependencia in dependencias %}
+                                <option value="{{ dependencia.id }}">{{ dependencia.parroquia }}</option>
+                            {% endfor %}
+                        </select>
+                        </div>
+                    </div>
                     <div class="form-group">
                         
                         <div class="input-group">
