--- a/flotavehicularzona7/appflotavehicular/templates/formdistrito/editardistrito.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formdistrito/editardistrito.html
@@ -73,7 +73,20 @@
                               required="" />
                       </div>
                   </div>
-                    
+                     <!-- Selección de circuito -->
+                     <div class="form-group">
+                      <div class="input-group">
+                          <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="far fa-file"></i></span>
+                          </div>
+                          <select name="id_circuito" id="id_circuito" class="form-control" required>
+                            {% for circuito in circuitos %}
+                                <option value="{{  circuito.id }}" {% if  circuito.id == my_circuito.id_circuito %}selected{% endif %}>{{ circuito.nombre_circuito }}</option>
+                            {% endfor %}
+                        </select>
+                        
+                      </div>
+                    </div>
                     <div class="form-group">
                         
                         <div class="input-group">
