--- a/flotavehicularzona7/appflotavehicular/templates/formrango/crearrango.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formrango/crearrango.html
@@ -50,7 +50,7 @@
                                 name="descripcion"
                                 id="descripcion" 
                                 class="form-control" 
-                                placeholder="Describe el rango" 
+                                placeholder="Describir el rango" 
                                 required="" />
                         </div>
                     </div>
