--- a/flotavehicularzona7/appflotavehicular/templates/formrango/editarrango.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formrango/editarrango.html
@@ -51,7 +51,7 @@
                                 name="descripcion"
                                 id="descripcion" 
                                 class="form-control" 
-                                placeholder="Describe el rango" 
+                                placeholder="Describir el Rango" 
                                 value="{{ my_rango.detalle }}" 
                                 required="" />
                         </div>
