--- a/flotavehicularzona7/appflotavehicular/templates/formdependencia/creardependencia.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formdependencia/creardependencia.html
@@ -58,7 +58,7 @@
                                             <select name="id_distrito" id="id_distrito" class="form-control" required>
                                                 {% for distrito in distritos %}
                                                     <option value="{{ distrito.cod_distrito }}">
-                                                        {{ distrito.nombre_distrito }}
+                                                        {{ distrito.id_circuito.id_subcircuito.nombre_subcircuito }} 
                                                     </option>
                                                 {% endfor %}
                                             </select>
