--- a/flotavehicularzona7/appflotavehicular/templates/formcombustibles/crearcombustible.html
+++ b/flotavehicularzona7/appflotavehicular/templates/formcombustibles/crearcombustible.html
@@ -136,7 +136,7 @@
                                         <select name="dependencia" id="dependencia" class="form-control" required>
                                             {% for dependencia in dependencias %}
                                                 <option value="{{ dependencia.id }}">
-                                                    {{ dependencia.provincia }}
+                                                    {{ dependencia.parroquia}}
                                                 </option>
                                             {% endfor %}
                                         </select>
